# apchat

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  REFACTORING_SUMMARY.md  RUSTYLINE_SIGWINCH_BUG.md  apchat.md  kimi.md  plan-tests.md  recommend.md  test-enhanced-skills.sh
agents/configs/: code_analyzer.json  code_reviewer.json  file_manager.json  planner.json  search_specialist.json  system_operator.json  terminal_specialist.json
apchat-main/: Cargo.toml
apchat-main/src/: cli.rs  main.rs
apchat-main/src/api/: client.rs  streaming.rs
apchat-main/src/app/: repl.rs  setup.rs  subagent.rs  subagent_tests.rs  task.rs  web_server.rs
apchat-main/src/chat/: history.rs  session.rs  state.rs  tests.rs
apchat-main/src/cli/: tests.rs
apchat-main/src/config/: api_key_tests.rs  helpers.rs  mod.rs
apchat-main/src/terminal/: mod.rs
apchat-main/src/tools_execution/: mod.rs  validation.rs
apchat-main/src/web/: mod.rs  persistence.rs  protocol.rs  routes.rs  server.rs  session_manager.rs
crates/apchat-agents/: Cargo.toml
crates/apchat-agents/src/: agent.rs  agent_factory.rs  coordinator.rs  lib.rs  task.rs
crates/apchat-llm-api/: Cargo.toml
crates/apchat-llm-api/src/: lib.rs
crates/apchat-logging/: Cargo.toml
crates/apchat-logging/src/: conversation_logger.rs  request_logger.rs
crates/apchat-models/: Cargo.toml
crates/apchat-models/src/: lib.rs  requests.rs
crates/apchat-policy/: Cargo.toml
crates/apchat-skills/: Cargo.toml
crates/apchat-skills/src/embeddings/: candle_backend.rs  fastembed_backend.rs
crates/apchat-terminal/: Cargo.toml
crates/apchat-terminal/src/: logger.rs  manager.rs  pty_backend.rs  pty_handler.rs  tmux_backend.rs
crates/apchat-todo/: Cargo.toml
crates/apchat-toolcore/: Cargo.toml
crates/apchat-toolcore/src/: lib.rs  tool_context.rs  tool_parsing.rs  tool_registry.rs
crates/apchat-toolcore/tests/: tool_context_tests.rs  tool_registry_tests.rs
crates/apchat-toolcore/tests/common/: mod.rs
crates/apchat-tools/: Cargo.toml
crates/apchat-tools/src/: file_ops.rs  iteration_control.rs  lib.rs  model_management.rs  project_tools.rs  search.rs  skill_tools.rs  subagent_tools.rs  system.rs  terminal_tools.rs  todo_tools.rs
crates/apchat-tools/tests/fixtures/: mod.rs
crates/apchat-wasm/: Cargo.toml  build.sh
crates/apchat-wasm/src/: lib.rs
crates/kimichat-agents/: Cargo.toml
crates/kimichat-agents/src/: agent.rs  agent_factory.rs  coordinator.rs  lib.rs  progress_evaluator.rs  task.rs
crates/kimichat-api/: Cargo.toml
crates/kimichat-api/src/: lib.rs
crates/kimichat-app/src/: cli.rs  lib.rs  lib_full.rs  main.rs
crates/kimichat-llm-api/src/: lib.rs
crates/kimichat-logging/src/: lib.rs  request_logger.rs
crates/kimichat-models/src/: lib.rs  responses.rs  types.rs
crates/kimichat-skills/: Cargo.toml
crates/kimichat-skills/src/embeddings/: fastembed_backend.rs
crates/kimichat-terminal/src/: backend.rs  pty_backend.rs  pty_handler.rs  tmux_backend.rs
crates/kimichat-toolcore/: Cargo.toml
crates/kimichat-toolcore/src/: lib.rs  tool.rs  tool_context.rs  tool_registry.rs
crates/kimichat-toolcore/tests/: tool_context_tests.rs
crates/kimichat-tools/: Cargo.toml
crates/kimichat-tools/src/: lib.rs  subagent_tools.rs  terminal_tools.rs
crates/kimichat-tools/src/core/: tool.rs  tool_context.rs
crates/kimichat-tools/src/tools/: file_ops.rs.later  mod.rs  todo_tools.rs.later
crates/kimichat-wasm/: build.rs
crates/kimichat-wasm/src/: chat_ui.rs
docs/: web_frontend_examples.md  web_implementation_checklist.md  web_protocol_examples.md  web_ui_wireframes.md
docs/architecture/: PLAN_PLUGGABLE_TERMINAL_BACKENDS.md  REFACTORING_MAP.md  REFACTORING_SUMMARY.md  TERMINAL_SESSIONS_DESIGN.md
docs/dev/: CODE_REVIEW_CHECKLIST.md  CUSTOMIZING_AGENTS_AND_SKILLS.md  how_to_new_tool.md  recommend.md  wishlist.md
docs/plans/: 2025-01-21-workspace-reorganization.md  2025-06-18-compact-command.md  2025-06-20-refactor-hardcoded-models.md  2025-06-23-llm-color-refactoring.md
docs/project/: CLAUDE.md  WEB_FRONTEND_DESIGN.md  WEB_FRONTEND_README.md  WEB_FRONTEND_SUMMARY.md  llm-color-refactoring-status.md  subagent.md  workspace-conversion-plan.md
docs/reorg-workspace/: CARGO_TOML_TEMPLATES.md  DEPENDENCY_MAP.md  MIGRATION_PLAN.md  README.md  WORKSPACE_STRUCTURE.md
done/: logging_spec.md  search_tool_spec.md
hooks/: session-start.sh
kimichat-main/: Cargo.toml
kimichat-main/src/: cli.rs  main.rs
kimichat-main/src/agents/: agent.rs  agent_factory.rs  coordinator.rs  task.rs
kimichat-main/src/api/: client.rs  streaming.rs
kimichat-main/src/app/: repl.rs  setup.rs  subagent.rs  task.rs  web_server.rs
kimichat-main/src/chat/: history.rs  session.rs  tests.rs
projects/jsonl-viewer/: Cargo.toml  kimi.md
src/: cli.rs  logging.rs  main.rs  main.rs.backup  policy.rs
src/agents/: agent.rs  agent_config.rs  agent_factory.rs  anthropic_client.rs  coordinator.rs  embedded_configs.rs  groq_client.rs  mod.rs  progress_evaluator.rs  task.rs
src/api/: client.rs  mod.rs  streaming.rs
src/app/: mod.rs  repl.rs  setup.rs  task.rs
src/chat/: history.rs  session.rs
src/config/: helpers.rs  mod.rs
src/core/: tool_context.rs  tool_registry.rs
src/logging/: request_logger.rs
src/models/: types.rs
src/skills/: mod.rs
src/terminal/: manager.rs  mod.rs  pty_backend.rs  pty_handler.rs  session.rs  tools.rs
src/tools/: file_ops.rs  model_management.rs  search.rs  system.rs  todo_tools.rs
src/tools_execution/: mod.rs  validation.rs
src/web/: protocol.rs  routes.rs  session_manager.rs
web/: index.html  manifest.json  session.html
(+36 files in other folders)
