[workspace]
members = [
    "apchat-main",
    "crates/apchat-agents",
    "crates/apchat-models",
    "crates/apchat-logging",
    "crates/apchat-llm-api",
    "crates/apchat-todo",
    "crates/apchat-policy",
    "crates/apchat-skills",
    "crates/apchat-terminal",
    "crates/apchat-toolcore",
    "crates/apchat-tools",
    "crates/apchat-wasm",
]
resolver = "2"

[workspace.dependencies]
# Testing dependencies shared across workspace
tokio-test = "0.4"
tempfile = "3.10"
mockall = "0.12"
pretty_assertions = "1.4"
wiremock = "0.5"
serde_json = "1.0"
proptest = "1.0"
tokio = { version = "1.41", features = ["full"] }
serial_test = "3.0"
env_logger = "0.11"
