[package]
name = "apchat-agents"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
colored = "2.1"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.41", features = ["sync"] }
tokio-util = "0.7"

# Internal dependencies
apchat-llm-api = { path = "../apchat-llm-api" }
apchat-logging = { path = "../apchat-logging" }
apchat-policy = { path = "../apchat-policy" }
apchat-skills = { path = "../apchat-skills" }
apchat-terminal = { path = "../apchat-terminal" }
apchat-todo = { path = "../apchat-todo" }
apchat-toolcore = { path = "../apchat-toolcore" }

[dev-dependencies]
# Use workspace dependencies for consistency
tokio-test = { workspace = true }
tempfile = { workspace = true }
pretty_assertions = { workspace = true }
mockall = { workspace = true }
serde_json = { workspace = true }
proptest = { workspace = true }
serial_test = { workspace = true }
