[package]
name = "apchat-skills"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
apchat-logging = { path = "../apchat-logging" }

[features]
default = []
embeddings = ["fastembed"]

[target."cfg(unix)".dependencies.fastembed]
optional = true
version = "5"
