[package]
name = "apchat-toolcore"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
colored = "2.1"
apchat-models = { path = "../apchat-models" }
apchat-policy = { path = "../apchat-policy" }
apchat-skills = { path = "../apchat-skills" }
apchat-terminal = { path = "../apchat-terminal" }
apchat-todo = { path = "../apchat-todo" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.41", features = ["sync"] }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
mockall = { workspace = true }
pretty_assertions = { workspace = true }
serde_json = { workspace = true }
proptest = { workspace = true }
